<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="enterOne">You did not specify the nickname of the first player</string>
    <string name="enterTwo">You did not specify the nickname of the second player</string>
    <string name="step">Turn</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="back">Menu</string>
    <string name="clear">Clear</string>
</resources>
