<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".ui.activity.LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:text="@string/app_name"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:layout_below="@id/text"
                android:layout_marginBottom="32dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/player_1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/playerOne"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="12"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/player_2">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/playerTwo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="12"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/playOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:onClick="onClick"
                    android:layout_marginTop="3dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/singleplayer" />

                <Button
                    android:id="@+id/playTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:background="@color/colorPrimary"
                    android:text="@string/multiplayer" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>